--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "video-util",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "wrapper ffmpeg and ffprobe to process video",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "dependencies": {
     "log4js": "^6.4.4"
   },
